--- a/src/pages/oferta/fotograf-na-urodziny-krakow.astro
+++ b/src/pages/oferta/fotograf-na-urodziny-krakow.astro
@@ -112,7 +112,7 @@ const metadata = {
           {
             title: 'Urodziny dla dorosłych',
             description: 'Elegancka fotografia urodzinowa w stylu dopasowanym do charakteru imprezy.',
-            icon: 'tabler:celebration',
+            icon: 'tabler:cake',
           },
           {
             title: 'Zdjęcia grupowe',
