--- a/src/pages/oferta/fotograf-na-konferencje-krakow.astro
+++ b/src/pages/oferta/fotograf-na-konferencje-krakow.astro
@@ -117,7 +117,7 @@ const metadata = {
           {
             title: 'Spotkania biznesowe',
             description: 'Dokumentacja ważnych spotkań biznesowych i negocjacji.',
-            icon: 'tabler:handshake',
+            icon: 'tabler:users',
           },
           {
             title: 'Targi i wystawy',
