--- a/src/pages/oferta/fotograf-na-studniowke.astro
+++ b/src/pages/oferta/fotograf-na-studniowke.astro
@@ -5,6 +5,8 @@ import Hero from '~/components/widgets/Hero.astro';
 import Content from '~/components/widgets/Content.astro';
 import Contact from '~/components/widgets/Contact.astro';
 
+import studniowkiCover from '~/assets/portfolio/covers/studniowki_cover.jpg';
+
 const metadata = {
   title: 'Fotograf na Studniówkę Kraków - ImprezowyFotograf',
   description: 'Potrzebujesz profesjonalnego fotografa na studniówkę? Oferujemy zdjęcia pełne energii i nowoczesności! Najlepsza oferta na wasz studniówkowy wieczór',
@@ -22,7 +24,7 @@ const metadata = {
       },
     ]}
     image={{ 
-      src: '/assets/img/portfolio/covers/studniowki_cover.jpg', 
+      src: studniowkiCover, 
       alt: 'Fotograf na studniówka',
       width: 1200,
       height: 600
