--- a/src/pages/oferta/fotograf-na-wydarzenia-studenckie.astro
+++ b/src/pages/oferta/fotograf-na-wydarzenia-studenckie.astro
@@ -2,6 +2,8 @@
 import Layout from '../../layouts/PageLayout.astro';
 import Hero from '~/components/widgets/Hero.astro';
 
+import imprezyStudenckieCover from '~/assets/portfolio/covers/imprezy_studenckie_cover.jpg';
+
 const metadata = {
   title: 'Fotograf na Wydarzenie studenckie - ImprezowyFotograf',
   description: 'Profesjonalne zdjęcia i filmy z imprez studenckich. Retuszowane zdjęcia, szybka dostawa a nawet zdjęcia live. Sprawdź kompleksową ofertę!',
@@ -11,7 +13,7 @@ const metadata = {
 <Layout metadata={metadata}>
   <Hero
     image={{ 
-      src: '/assets/portfolio/covers/imprezy_studenckie_cover.jpg', 
+      src: imprezyStudenckieCover, 
       alt: 'Fotograf na imprezę studencką'
     }}
   >
