--- a/src/pages/oferta/reportaze-i-projekty-specjalne.astro
+++ b/src/pages/oferta/reportaze-i-projekty-specjalne.astro
@@ -2,6 +2,8 @@
 import Layout from '~/layouts/PageLayout.astro';
 import Hero from '~/components/widgets/Hero.astro';
 
+import repoSpecjalneCover from '~/assets/portfolio/covers/repo_specjalne_cover.jpg';
+
 const metadata = {
   title: 'Reportaże specjalne - ImprezowyFotograf',
   description: 'Wykonujemy zdjęcia na różnego rodzaju wydarzeniach i zawodach. Mamy na koncie wiele wyjazdów zagranicznych z niemalże całego świata.',
@@ -11,7 +13,7 @@ const metadata = {
 <Layout metadata={metadata}>
   <Hero
     image={{ 
-      src: '/assets/portfolio/covers/repo_specjalne_cover.jpg', 
+      src: repoSpecjalneCover, 
       alt: 'Reportaże specjalne'
     }}
   >
