--- a/src/pages/oferta/streaming-video.astro
+++ b/src/pages/oferta/streaming-video.astro
@@ -2,6 +2,8 @@
 import Layout from '~/layouts/PageLayout.astro';
 import Hero from '~/components/widgets/Hero.astro';
 
+import streamingVideoCover from '~/assets/portfolio/covers/streaming_video_cover.jpg';
+
 const metadata = {
   title: 'Streaming video - ImprezowyFotograf',
   description: 'Profesjonalne transmisje live z konferencji i wydarzeń, webinary, programy dedykowane. Pełna obsługa audio i wideo.',
@@ -11,7 +13,7 @@ const metadata = {
 <Layout metadata={metadata}>
   <Hero
     image={{ 
-      src: '/assets/portfolio/covers/streaming_video_cover.jpg', 
+      src: streamingVideoCover, 
       alt: 'Streaming wideo'
     }}
   >
