--- a/src/pages/oferta/zdjecia-live.astro
+++ b/src/pages/oferta/zdjecia-live.astro
@@ -2,6 +2,8 @@
 import Layout from '../../layouts/PageLayout.astro';
 import Hero from '~/components/widgets/Hero.astro';
 
+import zdjeciaLiveCover from '~/assets/portfolio/covers/zdjecia_live_cover.jpg';
+
 const metadata = {
   title: 'Zdjęcia live - ImprezowyFotograf',
   description: 'Oferujemy możliwość dostarczania zdjęć niemalże w czasie rzeczywistym jeszcze w trakcie trwania wydarzenia. Zapytaj o szczegóły oferty.',
@@ -11,7 +13,7 @@ const metadata = {
 <Layout metadata={metadata}>
   <Hero
     image={{ 
-      src: '/assets/portfolio/covers/zdjecia_live_cover.jpg', 
+      src: zdjeciaLiveCover, 
       alt: 'Zdjęcia live'
     }}
   >
